# ddetox

./: .gitignore  README.md
.github/: LICENSE
.github/workflows/: documentation.yml  greetings.yml  release.yaml
app/ddetox/: .gitignore  README.md  package.json
app/ddetox/src/: app.html
app/ddetox/src-tauri/: Cargo.toml  tauri.conf.json
app/ddetox/src-tauri/icons/: icon.icns
app/ddetox/src-tauri/src/: commands.rs  config_store.rs  ipc_client.rs  lib.rs  main.rs  scheduler.rs  tray.rs
app/ddetox/src/lib/: api.ts  config.ts  time.ts  types.ts  validate.ts
app/ddetox/src/lib/components/: ActiveSessions.svelte  BlocklistEditor.svelte  BrandMark.svelte  LibraryEditor.svelte  NavBar.svelte  ScheduleBuilder.svelte  SessionControl.svelte  SessionEditor.svelte  StatusBar.svelte  WeekCalendar.svelte
app/ddetox/src/routes/: +layout.svelte  +page.svelte
app/ddetox/src/routes/calendar/: +page.svelte
app/ddetox/src/routes/sessions/: +page.svelte
app/ddetox/src/routes/stats/: +page.svelte
daemon/: Cargo.toml  README.md
daemon/scripts/: smoke_test.sh
daemon/src/: block_page.rs  dns.rs  ipc.rs  main.rs  netconfig.rs  persist.rs  protocol.rs  state.rs
daemon/tests/: ipc_smoke.rs
protocol/: Cargo.toml
protocol/src/: config.rs  lib.rs  schedule.rs
