[package]
name = "blockerd"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Privileged macOS daemon enforcing website/IP blocking via a DNS sinkhole and pf"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "blockerd"
path = "src/main.rs"

# Dependencies are added per milestone so the tree only carries what this build
# actually uses. M1 (skeleton + IPC) needs the async runtime, JSON codec, a
# logger, and a root-check. hickory/rusqlite/etc. arrive with their milestones.
[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
    "signal",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["user"] }
# M2: persistence. `bundled` compiles SQLite from source so the daemon ships
# self-contained (no system libsqlite dependency) for Developer ID distribution.
rusqlite = { version = "0.32", features = ["bundled"] }
# CIDR parsing/canonicalization for the address blocklist (reused by pf in M3).
ipnet = "2"
thiserror = "1"

[features]
# Reserved for milestone 3+ integration tests that mutate system state (pf,
# networksetup) and must only run inside the throwaway VM. The M1 IPC smoke
# test in tests/ is privilege-free and runs unconditionally.
system-tests = []
